--- a/app/process-control/process-control.html
+++ b/app/process-control/process-control.html
@@ -21,8 +21,8 @@
                 <div flex ng-click="vm.detailedProcesses[nm_key][key].showDetail = !vm.detailedProcesses[nm_key][key].showDetail" role="heading"
                      ng-init="vm.detailedProcesses[nm_key][key].showDetail = false" class="process-control-bg-transition md-whiteframe-z1"
                      style="padding: 6px;" layout="row" layout-align="start center" ng-class="{'bg-light-grey-0-3': vm.detailedProcesses[nm_key][key].showDetail}">
-                    <span ng-show="!vm.sensorsToDisplay[key + '_running'].value" class="red-color" style="width: 160px; margin: 0;"><b>{{::key | uppercase}}</b></span>
-                    <span ng-show="vm.sensorsToDisplay[key + '_running'].value" class="green-color" style="width: 160px; margin: 0;"><b>{{::key | uppercase}}</b></span>
+                    <span ng-show="!vm.sensorsToDisplay[key + '_running'].value" class="red-color" style="width: 160px; margin: 0;"><b>{{key | uppercase}}</b></span>
+                    <span ng-show="vm.sensorsToDisplay[key + '_running'].value" class="green-color" style="width: 160px; margin: 0;"><b>{{key | uppercase}}</b></span>
 
                     <div layout="row" style="position: absolute; right: 0; top: 0">
                         <md-button ng-show="!vm.sensorsToDisplay[key + '_running'].value" ng-click="vm.startProcess(nm_key, key); $event.stopPropagation()" title="Start Process">
@@ -42,7 +42,7 @@
                 <div ng-if="vm.detailedProcesses[nm_key][key].showDetail" class="grow-height-animation" style="cursor: auto;">
                     <div ng-repeat="(key, sensor) in vm.detailedProcesses[nm_key][key].sensors | orderBy:'name' track by key"
                          style="margin: 4px;" ng-if="key !== 'showDetail'" title="{{'Timestamp: ' + vm.sensorsToDisplay[key].date}}">
-                        <span>{{::key}}:</span>
+                        <span>{{key}}:</span>
                         <span style="margin-left: 4px"><b>{{vm.sensorsToDisplay[key].value}}</b></span>
                     </div>
                 </div>
