--- a/app/cam-components/cam-components.html
+++ b/app/cam-components/cam-components.html
@@ -1,5 +1,6 @@
-<div layout="column" ng-controller="CamComponentsCtrl as vm"
+<div ng-controller="CamComponentsCtrl as vm"
      style="margin-left: auto; margin-right: auto; min-width: 1100px; max-width: 1100px; padding-left: 16px; padding-right: 16px;">
+
     <div class="cam-build-info" layout-align="center center" layout="column">
         <div flex style="padding: 16px;" class="md-whiteframe-z5" layout="column">
             <span flex style="text-align: center; font-size: 16px; cursor: pointer;"
