--- a/app/scheduler/scheduler-home.html
+++ b/app/scheduler/scheduler-home.html
@@ -9,12 +9,14 @@
         <div style="padding: 24px">
             <div ng-repeat="subarray in vm.subarrays track by $index" layout="column" layout-align="start center"
                  class="md-whiteframe-z1" style="margin: 12px 0;" md-theme="{{themePrimaryButtons}}">
-                <md-toolbar md-theme="{{subarray.state === 'inactive'? 'green' : subarray.state === 'active'? 'amber' : 'purple'}}"
-                            class="md-whiteframe-z2 md-hue-2 md-toolbar-tools-medium" layout="row" layout-align="center center">
+                <md-toolbar md-theme="{{subarray.state === 'inactive'? 'grey' : subarray.state === 'active'? 'green' : subarray.state === 'error'? 'amber' : 'deep-purple'}}"
+                            class="md-whiteframe-z2 md-toolbar-tools-medium" layout="row" layout-align="center center"
+                            ng-class="{'md-hue-2': subarray.state !== 'inactive'}">
                     <span>SUBARRAY {{subarray.id}} - {{subarray.state}}</span>
                     <span ng-if="subarray.maintenance">{{", in maintenance"}}</span>
+                    <span ng-if="subarray.maintenance" title="Subarray is in Maintenance" class="fa fa-wrench" style="position: absolute; right: 8px; top: 12px;"></span>
                 </md-toolbar>
-                <div layout="row" layout-align="center center">
+                <div layout="row" layout-align="center center" ng-class="{'maintenance-bg':subarray.maintenance}">
                     <md-button class="md-primary md-raised" ng-click="vm.stateGoWithSubId('scheduler.resources', subarray.id)"
                                style="height: 79px; width: 225px;">
                         <div ng-include="'images/subarrays-resources.svg'" class="inline-svg-icon" style="top: 6px; left: 2px;"></div>
